--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'poppins', sans-serif;
+  font-family: "poppins", sans-serif;
 }
 
 .hero-section {
@@ -10,25 +10,6 @@
   text-align: center;
   height: 100vh;
   overflow: hidden;
-}
-
-.hero-content {
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 4;
-}
-
-.hero-content h1 {
-  color: white;
-  font-size: 42px;
-  padding-bottom: 2%;
-}
-
-.hero-content p {
-  color: white;
-  font-size: 24px;
 }
 
 .hero-video {
@@ -52,11 +33,6 @@
   z-index: 2;
 }
 
-.hireme {
-  padding-top: 2%;
-}
-
-
 /* css for projects section starts*/
 
 .container {
@@ -70,17 +46,17 @@
 .box {
   flex: 1;
   overflow: hidden;
-  transition: .5s;
+  transition: 0.5s;
   margin: 0 2%;
-  box-shadow: 0 20px 30px rgba(0,0,0,.1);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
   line-height: 0;
 }
 
 .box > img {
   width: 200%;
   height: calc(100% - 10vh);
-  object-fit: cover; 
-  transition: .5s;
+  object-fit: cover;
+  transition: 0.5s;
 }
 
 .box > span {
@@ -91,11 +67,12 @@
   line-height: 2.6;
 }
 
-.box:hover { flex: 1 1 50%; }
+.box:hover {
+  flex: 1 1 50%;
+}
 .box:hover > img {
   width: 100%;
   height: 100%;
 }
 
 /* css for projects section ends*/
- 
